[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
byteorder = "1.4.3"
enum_primitive = "0.1.1"
num = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0.140", features = ["derive"] }
tauri = { version = "1.0.5", features = ["dialog-all"] }
dirs = "4.0.0"
chrono = "0.4.19"
geo = "0.22.1"
geo-types = "0.7.6"
# gpx = { version = "0.8.6", features = ["use-serde"] }
gpx = { git = "https://github.com/georust/gpx", rev = "6e3da64" }
geojson = "0.23.0"
fitparser = "0.5.0"
time = "0.3.11"
ulid = "0.6.0"
geotiff = "0.0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
zip = "0.6.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
